# RuneKit-Reforged

./: .gitignore  CLAUDE.md  Makefile  README.md  THIRD_PARTY_LICENSE.md  pyproject.toml
.github/workflows/: build-mac.yml  build.yml
deploy/: de.cupco.runekit.metainfo.xml  runekit-appimage.sh
runekit/: main.py
runekit/app/: app.py  store.py
runekit/app/view/: browser_window.py  popup_window.py  window.py
runekit/browser/: api.py  overlay.py  profile.py  scheme.py
runekit/game/: overlay.py  qt.py
runekit/game/quartz/: manager.py
runekit/host/: appstore_model.py  host.py  settings.py
runekit/ui/: tooltip.py  windowframe.py
